# sparsedense

./: CMakeLists.txt  defaultinput.txt  main.cpp  sparsedense.kdev4
example/: Z_small_dense.csr  correct_diag_inverse_C.txt
src/: CSRcomplex.cpp  CSRcomplex.hpp  CSRdouble.cpp  CSRdouble.hpp  IO.cpp  IO.hpp  ParDiSO.cpp  ParDiSO.hpp  RealMath.cpp  config.hpp  readdist.cpp  readinput.cpp  schur.cpp  shared_var.h  tools.cpp
trunk/: CMakeLists.txt  defaultinput.txt  main.cpp
trunk/example/: X_small_dense2.csr  defaultinput.txt
trunk/src/: RealMath.hpp  readdist.cpp  readinput.cpp  schur.cpp  shared_var.h  smat.h  timing.hpp  tools.cpp
